Trying to hide api key

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,13 @@ android {
     }
 
     buildTypes {
+        debug{
+            buildConfigField 'String' , "ApiKey" , MY_OPEN_WEATHER_MAP_SM_WEATHER_API_KEY
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String' , "ApiKey" , MY_OPEN_WEATHER_MAP_SM_WEATHER_API_KEY
         }
     }
 }
